--- a/app/src/pages/manage.astro
+++ b/app/src/pages/manage.astro
@@ -5,7 +5,7 @@ import RepoManager from '../components/RepoManager.astro';
 
 <Layout title="Manage Repository">
   <main class="page-container">
-    <RepoManager client:visible/>
+    <RepoManager/>
   </main>
 </Layout>
 
