--- a/app/src/components/Welcome.astro
+++ b/app/src/components/Welcome.astro
@@ -9,8 +9,7 @@ const basePath = import.meta.env.BASE_URL;
       <h2>A Github Collection Management Project.</h2>
       <section id="links">
         <a class="comic-button" href={basePath+"getting-started"} >Docs</a>
-		    <a class="comic-button" href={basePath+"table"} >Table</a>
-		    <a class="comic-button" href={basePath+"manage"} >Manage</a>
+		    <a class="comic-button" href={basePath+"explorer"} >Explorer</a>
         <a href="https://github.com/Jvcon/MyGitstar">Github</a>
       </section>
     </section>
@@ -25,6 +24,7 @@ const basePath = import.meta.env.BASE_URL;
     height: 100%;
     z-index: -1;
     filter: blur(100px);
+    background-color: var(--color-gray-600);
   }
 
   #container {
