--- a/app/src/layouts/Layout.astro
+++ b/app/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import { pwaInfo } from 'virtual:pwa-info';
 ---
 <!doctype html>
 <html lang="en">
@@ -12,8 +13,8 @@ import '../styles/global.css';
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="MyGitstar" />
-    <link rel="manifest" href="/site.webmanifest" />
     <meta name="generator" content={Astro.generator} />
+    { pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} /> }
     <title>My MyGitstar</title>
   </head>
   <body>
